# markata-slide-starter

./: .gitignore  copier.yml  markata.toml  pyproject.toml
.github/workflows/: build-site.yml
pages/: about.md  configuration.md  index.md
